feat: enviar solicitud (B19)
